[gd_scene load_steps=6 format=2]

[ext_resource path="res://Asset/Altitude/Cave/StoneColumn/sprite/stalactite_2.png" type="Texture" id=1]
[ext_resource path="res://Asset/Altitude/Cave/StoneColumn/sprite/stalactite_1.png" type="Texture" id=2]
[ext_resource path="res://Asset/Altitude/Cave/StoneColumn/StoneColumn.gd" type="Script" id=3]
[ext_resource path="res://Asset/Altitude/Cave/StoneColumn/sprite/stalagmite_1.png" type="Texture" id=4]
[ext_resource path="res://Asset/Altitude/Cave/StoneColumn/sprite/stalagmite_2.png" type="Texture" id=5]

[node name="StoneColumn" type="Node2D"]
script = ExtResource( 3 )

[node name="Stalactite2" type="Sprite" parent="."]
position = Vector2( 47, -97.5 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Stalactite1" type="Sprite" parent="."]
visible = false
position = Vector2( 41, -97.5 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Stalagmite1" type="Sprite" parent="."]
visible = false
position = Vector2( 40, -98 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Stalagmite2" type="Sprite" parent="."]
visible = false
position = Vector2( 58, -98 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="DeathTimer" type="Timer" parent="."]

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
